// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ignore external className 1`] = `
<div
  className="Badge__root Badge__neutral"
>
  2 new
</div>
`;

exports[`should render Badge 1`] = `
<div
  className="Badge__root Badge__neutral"
>
  2 new
</div>
`;

exports[`should render a strong positive Badge 1`] = `
<div
  className="Badge__root Badge__secondary Badge__strong"
>
  2 new
</div>
`;

exports[`should render accent Badge 1`] = `
<div
  className="Badge__root Badge__accent"
>
  2 new
</div>
`;

exports[`should render critical Badge 1`] = `
<div
  className="Badge__root Badge__critical"
>
  2 new
</div>
`;

exports[`should render info Badge 1`] = `
<div
  className="Badge__root Badge__info"
>
  2 new
</div>
`;

exports[`should render neutral Badge 1`] = `
<div
  className="Badge__root Badge__neutral"
>
  2 new
</div>
`;

exports[`should render secondary Badge 1`] = `
<div
  className="Badge__root Badge__secondary"
>
  2 new
</div>
`;
